--- a/index.html
+++ b/index.html
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Botanist</title>
+
     <!-- ::::: Bootstrap CSS ::::: -->
     <link rel="stylesheet" href="./scss-&-css/style.css">
 
+    <!-- ::::: Italiana font ::::: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+
+    <!-- ::::: Poppins font ::::: -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
-    <h1 class="naslov">Pozdravljen svet jaz sem Botanist</h1>
+
+    <section id="hero_wrapper" class="d-flex justify-content-center align-items-center">
+        <div id="hero" class="d-flex flex-column align-items-center">
+            <div class="type-block text-center text-white  mb-3">
+                <h1 class="display-1 m-0">BOTANIST</h1>
+                <h2 class="h1">Caffe and Bistro</h2>
+            </div>
+            <div class="button-block d-flex flex-column">
+                <button type="button" class="btn btn-secondary text-white  mb-3">Primary</button>
+                <button type="button" class="btn btn-primary  mb-3">Primary</button>
+            </div>
+            <img src="./node_modules/bootstrap-icons/icons/arrow-down-short.svg" alt="down scroll icon">
+        </div>
+    </section>
 
     <!-- ::::: Scripts ::::: -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
+
 </html>
