Started development on about us section of homepage

--- a/index.html
+++ b/index.html
@@ -63,6 +63,31 @@
     </section>
     <!-- ::::: Menu section ::::: -->
 
+    <!-- ::::: About us ::::: -->
+    <section id="about-us_wrapper" class="d-flex flex-column  container-fluid">
+        <div id="about-us" class="container-lg d-flex flex-column  py-5 my-5">
+            <div class="type-block text-white  pb-5">
+                <h1 class="pb-4">ABOUT US</h1>
+                <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id facilisi potenti dignissim
+                    ornare mi neque.</p>
+                <p class="pb-3">Nibh penatibus tempus curabitur interdum eleifend sit sit at. Vivamus a lectus sagittis
+                    morbi aliquet vitae. Malesuada lobortis id in diam aliquet duis.</p>
+                <a class="read-more-arrow  d-flex align-items-center">
+                    <p class="h5 text-secondary  pe-4 m-0"><u>Read more</u></p>
+                    <svg id="long-arrow" class="side-bounce" width="115" height="16" viewBox="0 0 115 16"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M114.707 8.70711C115.098 8.31658 115.098 7.68342 114.707 7.29289L108.343 0.928932C107.953 0.538408 107.319 0.538408 106.929 0.928932C106.538 1.31946 106.538 1.95262 106.929 2.34315L112.586 8L106.929 13.6569C106.538 14.0474 106.538 14.6805 106.929 15.0711C107.319 15.4616 107.953 15.4616 108.343 15.0711L114.707 8.70711ZM0 9H114V7H0V9Z" />
+                    </svg>
+                </a>
+            </div>
+            <div class="image-block">
+                <img class="img-fluid" src="./assets/foto/image-placeholder_3.png" alt="...">
+            </div>
+        </div>
+    </section>
+    <!-- ::::: About us ::::: -->
+
 
 
 
