--- a/index.html
+++ b/index.html
@@ -146,7 +146,22 @@
     </section>
     <!-- ::::: Table reservation ::::: -->
 
-
+    <!-- ::::: Footer ::::: -->
+    <section id="footer_wrapper" class="container-fluid d-flex flex-column">
+        <footer class="d-flex flex-column  py-5 my-5">
+            <div class="type-block text-center text-white  mb-3">
+                <h1 class="display-1 m-0">BOTANIST</h1>
+                <h2 class="h4 mb-4">Caffe and Bistro</h2>
+                <p class="mb-4">Izbrana lokacija<br>
+                    1000 Ljubljana, Slovenija</p>
+                <p>MON – SAT<br>
+                    10:00 am – 19:00 pm</p>
+            </div>
+            <img class="left-footer-image" src="./assets/vectors/right-brand-logo_cut.svg" alt="the brand pictogram">
+            <img class="right-footer-image" src="./assets/vectors/left-brand-logo_cut.svg" alt="the brand pictogram">
+        </footer>
+    </section>
+    <!-- ::::: Footer ::::: -->
 
 
     <!-- ::::: Scripts ::::: -->
