sexy navigation added

--- a/index.html
+++ b/index.html
@@ -29,19 +29,42 @@
     <!-- ::::: Hero section ::::: -->
     <section id="hero_wrapper" class="container-fluid  d-flex  justify-content-center align-items-center">
         <div id="hero" class="d-flex flex-column align-items-center">
+
+            <!-- ::: Type block ::: -->
             <div class="type-block text-center text-white  mb-3">
                 <h1 class="display-1 m-0">BOTANIST</h1>
                 <h2 class="h1">Caffe and Bistro</h2>
             </div>
+            <!-- ::: Type block ::: -->
+
+            <!-- ::: Button block ::: -->
             <div class="d-flex flex-column">
                 <button type="button" class="btn btn-secondary text-white  mb-3">MENU</button>
                 <button type="button" class="btn btn-primary  mb-3">RESERVATION</button>
             </div>
+            <!-- ::: Button block ::: -->
+
+            <!-- ::: Pointing arrow ::: -->
             <svg id="down-arrow" class="bounce" xmlns="http://www.w3.org/2000/svg" width="48" height="48"
                 class="bi bi-arrow-down-short" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
                     d="M8 4a.5.5 0 0 1 .5.5v5.793l2.146-2.147a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-3-3a.5.5 0 1 1 .708-.708L7.5 10.293V4.5A.5.5 0 0 1 8 4z" />
             </svg>
+            <!-- ::: Pointing arrow ::: -->
+
+            <!-- ::: Elegant side navigation ::: -->
+            <div id="elegant-side-navigation" class=" flex-row align-items-center">
+                <nav class="d-flex flex-column  text-white  pe-5">
+                    <a href="/html/"><p class="text-end mb-4">ABOUT US</p></a>
+                    <a href="#menu"><p class="text-end mb-4">MENU</p></a>
+                    <a href="/html/"><p class="text-end mb-4">RESERVATION</p></a>
+                    <a href="/html/"><p class="text-end mb-4">GALLERY</p></a>
+                    <a href="/html/"><p class="text-end mb-4">CONTACT</p></a>
+                </nav>
+                <img src="./assets/vectors/vertical-line.svg" alt="">
+            </div>
+            <!-- ::: Elegant side navigation ::: -->
+
         </div>
     </section>
     <!-- ::::: Hero section ::::: -->
