--- a/index.html
+++ b/index.html
@@ -26,6 +26,64 @@
 
 <body>
 
+    <!-- ::::: Header ::::: -->
+    <!-- <nav class="navbar navbar-expand-lg nav-scrolled" id="brand-header">
+        <div class="container-lg">
+            <div class="spacer d-lg-none"></div>
+            <a class="navbar-brand" href="/index.html">
+                <img src="/assets/images/EVALLEY_logo_completed_black.svg" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+                onclick="disableScroll()">
+                <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M4 23H26Z" fill="black" />
+                    <path d="M4 7H26M4 15H26M4 23H26" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                        stroke-linecap="round" />
+                </svg>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link  px-3" href="/index.html"><strong>Domov</strong></a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link  text-black  px-3" href="/evalley-tecaj-racunovodja.html"><strong>Tečaj
+                                Evalley računovodja</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  text-black  px-3" href="/contact.html"><strong>Kontakt</strong></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  text-black  px-3" href="#"><strong>Spletna učilnica</strong></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav> -->
+    <!-- ::::: Header ::::: -->
+
+    <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M4 23H26Z" fill="black" />
+                <path d="M4 7H26M4 15H26M4 23H26" stroke="white" stroke-width="2" stroke-miterlimit="10"
+                    stroke-linecap="round" />
+            </svg>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link disabled">Disabled</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+
     <!-- ::::: Hero section ::::: -->
     <section id="hero_wrapper" class="container-fluid  d-flex  justify-content-center align-items-center">
         <div id="hero" class="d-flex flex-column align-items-center">
@@ -206,6 +264,7 @@
 
     <!-- ::::: Scripts ::::: -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./js/scrollable-header.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
 
