--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 
     <!-- ::::: Scripts ::::: -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
     <script src="./js/scrollable-header.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
