--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
 
 
     <!-- ::::: Scripts ::::: -->
-    <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
     <script src="./js/scrollable-header.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
 
