--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
 
     <!-- ::::: Scripts ::::: -->
     <script src="js/scrollable-header.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- <script src="node-modules/bootstrap/dist/js/bootstrap.js"></script> -->
     <!-- ::::: Scripts ::::: -->
 </body>
 
