--- a/index.html
+++ b/index.html
@@ -237,11 +237,10 @@
     </section>
     <!-- ::::: Footer ::::: -->
 
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
     <!-- ::::: Scripts ::::: -->
-    <script src="js/scrollable-header.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <!-- <script src="node-modules/bootstrap/dist/js/bootstrap.js"></script> -->
+    <script src="./js/scrollable-header.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
 
