--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </section>
     <!-- ::::: Footer ::::: -->
 
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
     <!-- ::::: Scripts ::::: -->
     <script src="./js/scrollable-header.js"></script>
