--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
 
     <!-- ::::: Scripts ::::: -->
     <script src="./js/scrollable-header.js"></script>
+    <script src="./js/bootstrap.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
 
