Testinfg bootstrap.js linking

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- ::: Type block ::: -->
             <div class="type-block text-center text-white  mb-3">
                 <h1 class="display-1 m-0">BOTANIST</h1>
-                <h2 class="h1">Caffe and Bistro</h2>
+                <h2>Caffe and Bistro</h2>
             </div>
             <!-- ::: Type block ::: -->
 
