Quick update to repo name

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <!-- ::::: Scripts ::::: -->
     <script src="./js/scrollable-header.js"></script>
-    <script src="./js/bootstrap.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
 
