--- a/index.html
+++ b/index.html
@@ -237,11 +237,13 @@
     </section>
     <!-- ::::: Footer ::::: -->
 
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
     <!-- ::::: Scripts ::::: -->
     <script src="./js/scrollable-header.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- <script src="./node_modules/bootstrap/dist/js/bootstrap.js"></script> -->
     <!-- ::::: Scripts ::::: -->
 </body>
 
