--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     crossorigin="anonymous"></script> -->
 
     <!-- ::::: Scripts ::::: -->
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="./js/scrollable-header.js"></script>
     <!-- ::::: Scripts ::::: -->
 </body>
