Menu image resizing changed

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
             <!-- ::: Type block ::: -->
 
             <!-- ::: Menu block ::: -->
-            <div class="card bg-dark text-white">
-                <img src="./assets/foto/image-placeholder_2.png" class="card-img  rounded-0" alt="...">
+            <div class="card  bg-transparent text-white border-0">
+                <img src="./assets/foto/Example-of-menu.png" class="rounded-0" alt="...">
                 <div class="card-img-overlay  d-flex flex-column justify-content-center align-items-center">
                     <button type="button" class="btn btn-secondary text-white  mb-3">VIEW MENU</button>
                 </div>
