Update about us sizing

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
             <!-- ::: Menu block ::: -->
             <div class="card  bg-transparent text-white border-0">
-                <img src="./assets/foto/Example-of-menu.png" class="rounded-0" alt="...">
+                <img src="./assets/foto/Example-of-menu.png" class="img-fluid rounded-0" alt="...">
                 <div class="card-img-overlay  d-flex flex-column justify-content-center align-items-center">
                     <button type="button" class="btn btn-secondary text-white  mb-3">VIEW MENU</button>
                 </div>
@@ -126,10 +126,10 @@
     <!-- ::::: About us ::::: -->
     <section id="about-us_wrapper" class="d-flex flex-column  container-fluid">
         <div id="about-us"
-            class="container-lg  d-flex flex-column flex-lg-row  justify-content-between align-items-center  py-5 my-5">
+            class="container-lg  d-flex flex-column flex-md-row  justify-content-between align-items-center  py-5 my-5">
 
             <!-- ::: Type block ::: -->
-            <div class="type-block  col-lg-5  text-white  pb-5">
+            <div class="type-block  col-md-6 col-lg-5 text-white  pb-5">
                 <h1 class="pb-4">ABOUT US</h1>
                 <p class="pb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id facilisi potenti dignissim
                     ornare mi neque.</p>
@@ -147,7 +147,7 @@
             <!-- ::: Type block ::: -->
 
             <!-- ::: Image block ::: -->
-            <div class="image-block  col-lg-6">
+            <div class="image-block col-md-5 col-lg-6">
                 <img class="img-fluid" src="./assets/foto/image-placeholder_3.png" alt="...">
             </div>
             <!-- ::: Image block ::: -->
