fixed about us section image styling

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
             <!-- ::: Image block ::: -->
             <div class="image-block col-md-5 col-lg-6">
-                <img class="img-fluid" src="./assets/foto/image-placeholder_3.png" alt="...">
+                <img class="img-fluid d-lg-none" src="./assets/foto/image-placeholder_3.png" alt="...">
+                <img class="img-fluid d-none d-lg-block" src="./assets/foto/image-placeholder_3b.jpg" alt="...">
             </div>
             <!-- ::: Image block ::: -->
 
