--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <!-- ::: Button block ::: -->
             <div class="d-flex flex-column">
-                <a href="#menu" type="button" class="btn btn-secondary text-white  mb-3">MENU</a>
+                <button href="#menu" type="button" class="btn btn-secondary text-white  mb-3">MENU</button>
                 <a href="#table-reservation" type="button" class="btn btn-primary  mb-3">RESERVATION</a>
             </div>
             <!-- ::: Button block ::: -->
