--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             <div class="d-flex flex-column">
                 <button href="#menu" type="button" class="btn btn-secondary text-white  mb-3">MENU</button>
                 <a class="btn btn-primary" href="#" role="button">Link</a>
-                <a href="#table-reservation" type="button" class="btn btn-primary  mb-3">RESERVATION</a>
+                <a class="btn btn-secondary" href="#" role="button">Link</a>
+                <a href="#table-reservation" class="btn btn-primary  mb-3">RESERVATION</a>
             </div>
             <!-- ::: Button block ::: -->
 
