Button styling updated

--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 
             <!-- ::: Button block ::: -->
             <div class="d-flex flex-column">
-                <button href="#menu" type="button" class="btn btn-secondary text-white  mb-3">MENU</button>
-                <a class="btn btn-primary" href="#" role="button">Link</a>
-                <a class="btn btn-secondary" href="#" role="button">Link</a>
+                <a href="#menu" class="btn btn-secondary text-white  mb-3">MENU</a>
                 <a href="#table-reservation" class="btn btn-primary  mb-3">RESERVATION</a>
             </div>
             <!-- ::: Button block ::: -->
